--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 .navigation-wrapper {
     position: relative;
+    width: 100vw;
   }
   
   .dots {
@@ -10,10 +11,10 @@
   
   .dot {
     border: none;
-    width: 50px;
+    width: 200px;
     height: 10px;
-    background: #c5c5c5;
-    border-radius: 20%;
+    background: #9D9D9D;
+    border-radius: 10px;
     margin: 0 5px;
     padding: 5px;
     cursor: pointer;
@@ -24,7 +25,7 @@
   }
   
   .dot.active {
-    background: #000;
+    background: #E9E9E9;
   }
   
   .arrow {
@@ -39,12 +40,12 @@
   }
   
   .arrow--left {
-    left: 5px;
+    left: 10px;
   }
   
   .arrow--right {
     left: auto;
-    right: 5px;
+    right: 10px;
   }
   
   .arrow--disabled {
